--- a/public/assets/css/style_front.css
+++ b/public/assets/css/style_front.css
@@ -64,7 +64,10 @@ body {
     bottom: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    position: absolute;
+    width: 100%;
+    padding: 5px;
    
 }
 
