--- a/public/assets/css/style_back.css
+++ b/public/assets/css/style_back.css
@@ -239,7 +239,9 @@ li {
 	background-color: #64978E;
 }
 
-
+.clic-video {
+	color: #549285;
+}
 
 /***********STYLE PAGE COMMENT****************/
 
