--- a/public/assets/css/style_frontQuestion.css
+++ b/public/assets/css/style_frontQuestion.css
@@ -336,7 +336,7 @@ p {
 
 .scroll_comment{
 	width: auto;
-	max-height: 620px;
+	max-height: 580px;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
@@ -356,6 +356,8 @@ display: none;
 	.title_conteneur_L h1 {font-size: 3em;}
 	.questions p {font-size: 2.1em;}
 	.lien-reponse a {font-size: 1.2em;}
+	.scroll_comment{max-height: 310px;}
+	.name_categorie {font-size: 2.5em; padding-bottom: 0.3em; padding-top: 0.3em;}
 }
 
 @media all and (min-width: 861px) and (max-width: 1200px){
@@ -370,7 +372,7 @@ display: none;
 	.erreur_commentaire {font-size: 1.5em; padding-top:0.5em; padding-bottom: 1em;}
 	.form-horizontal .control-label {padding-top: 0;}
 	.persoB {padding-top: 0.2em;padding-bottom: 0.2em;padding-left: 1.2em;padding-right: 1.2em;font-size: 1.1em;}
-	.scroll_comment{max-height: 240px;}
+	.scroll_comment{max-height: 220px;}
 }
 
 @media all and (min-width: 450px) and (max-width: 860px){
